--- a/main.html
+++ b/main.html
@@ -8,6 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
+		<p>My current favorite song is <span><a href="https://www.youtube.com/watch?v=DjAW8PX3xKs">aaradhya</a></span></p>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
